desktop works now

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,26 +1,21 @@
 #a {
-    height:75px;
     width: 480px;
     border:solid black 1px;
 }
 #b {
-    height:150px;
     width: 480px;
     border:solid black 1px;
 }
 #c {
-    height:125px;
-    width: 480px;
+     width: 480px;
     border:solid black 1px;
 }
 #d {
-    height:125px;
     width: 480px;
     border:solid black 1px;
 }
 
 #e{
-    height:240px;
     width: 250px;
     border:solid black 1px;
     float:right;
@@ -28,13 +23,11 @@
 }
 
 #f{
-    height:240px;
     width: 250px;
     border:solid black 1px;
 }
 
 #g{
-    height:240px;
     width: 250px;
     border:solid black 1px; 
     float:right;
@@ -42,7 +35,6 @@
 }
 
 #h{
-    height:240px;
     width: 250px;
     border:solid black 1px;
    
@@ -50,9 +42,45 @@
 }
 
 #i{
-    height:80px;
     width: 480px;
     border:solid black 1px;
     overflow: auto;
 }
+
+@media( min-width: 960px ) {
+    body{
+        width:100%;
+    }
+
+   div{
+       float:left;
+   }
+   
+   #a{
+       width:100%;
+   }
+
+    #b{
+        width:200px; 
+        
+    }
+    
+    #c {
+        width:380px;
+    }
+    
+    #d{
+     width:380px;
+    }
+
+    #e,#f, #g, #h{
+        width:190px;
+    }
+
+   #i{
+        width:760px;
+    }
+
+        
+    }
 
