--- a/styles/base.css
+++ b/styles/base.css
@@ -4,8 +4,24 @@
     border: solid 1px grey;
     background: lightgrey;
     margin: auto;
+    width:100%;
+    
+  }
+
+  body{
+    width:960px;
   }
   
-  body {
-    width:480px;
+  
+@media(min-width: 768px){
+  header, aside, section, article, footer {
+      max-width: 960px;
   }
+  
+}
+
+@media only screen and (max-width: 500px) {
+  header, aside, section, article, footer {
+      max-width: 500px;
+  }
+}
