--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,3 +1,5 @@
+@media only screen and (max-width: 500px) {
+
 #a {
     width: 480px;
     border:solid black 1px;
@@ -45,6 +47,8 @@
     width: 480px;
     border:solid black 1px;
     overflow: auto;
+}
+
 }
 
 @media( min-width: 960px ) {
