--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,3 +1,4 @@
+@media only screen and (max-width: 500px) {
 
 #a {
     height:75px;
@@ -41,6 +42,10 @@
     height:80px;
     
 }
+
+}
+
+
 
 @media(min-width:768px) {
 div{
